# ai-study-assistant

./: .gitignore  LICENSE  package-lock.json  package.json  pyproject.toml
.streamlit/: config.toml
src/: main.py  node_setup.py
src/clients/: gpt_client.py  notion_client.py  s3_client.py
src/config/: config.py  prompts.toml
src/di/: container.py
src/mcp_server/: server.py
src/models/: models.py
src/scripts/: martian_cli.mjs
src/tools/: notion_toolset.py  quiz_toolset.py
src/ui/: Page.py  auth.py  chatbot_page.py  evaluation.py  net_action.py  revision_page.py  state.py  upload_notes_page.py
src/utils/: constants.py  embedding_utils.py  image_utils.py  load_secrets.py  logging.py  martian.py  notion_utils.py  prompt_utils.py  s3_utils.py  styling.py
src/workflows/: chatbot_workflow.py  ingestion_workflow.py  llm_markdown_workflow.py  llm_quiz_evaluation_workflow.py  llm_quiz_generation_workflow.py  quiz_generation_workflow.py  workflow.py
tests/: test_data.py
tests/utils/: test_s3_utils.py
